# code-challenges

./: .dockerignore  .env  .gitattributes  .gitignore  LICENSE  LICENSE.adoc  README.md  license.adoc  pydoc_links.adoc  pyproject.toml  qodana  qodana.pub  template.py
c/: .clang-format  CMakeLists.txt
c++/: CMakeLists.txt
c++/code_wars/: convert_number_to_reversed_array_of_digits.cpp
c++/code_wars/convert_number_to_reversed_array_of_digits/: solution.cpp
c++/hackerrank/: apple_and_orange.cpp  dynamic_array.cpp
c++/hackerrank/2d_array_ds/: solution.cpp
c++/leet_code/: 1544.c  1614.cpp  26.cpp  27.cpp  2958.cpp  678.cpp  88.cpp
c/code_wars/: convert_number_to_reversed_array_of_digits.c  keep_up_the_hoop.c
c/hackerrank/: arrays_and_strings_digit_frequency.c  arrays_and_strings_dynamic_array.c  conditionals_and_loops_bitwise_operators.c  conditionals_and_loops_conditional_statements.c  conditionals_and_loops_for_loop.c  conditionals_and_loops_printing_pattern_using_loops.c  conditionals_and_loops_sum_of_digits_of_a_five_digit_number.c  functions_calculate_the_nth_term.c  functions_permutations_of_strings.c  functions_querying_the_document.c  functions_sorting_array_of_strings.c  functions_students_marks_sums.c  functions_variadic.c  introduction_functions.c  introduction_hello_world.c  introduction_playing_with_characters.c  introduction_pointers.c  introduction_sum_and_difference_of_two_numbers.c  structs_and_enums_post_transition.c  structs_and_enums_small_triangles_large_triangles.c
c/leet_code/: 1219.c  1249.c  1289.c  1293.c  1325.c  140.c  1544.c  1614.c  165.c  1700.c  1863.c  1915.c  1971.c  1992.c  200.c  205.c  2073.c  2331.c  2370.c  2441.c  2487.c  26.c  27.c  2812.c  2816.c  2958.c  3075.c  402.c  42.c  463.c  623.c  678.c  786.c  79.c  85.c  861.c  88.c  881.c  950.c  979.c  (+1 more)
challenges/projects/data_flair/: Iris Classification - DataFlair.ipynb.old  pyproject.toml
cpp/: .clang-format  CMakeLists.txt
cpp/code_wars/: convert_number_to_reversed_array_of_digits.cpp
cpp/hackerrank/: 2d_array_ds.cpp  apple_and_orange.cpp  dynamic_array.cpp  number_line_jumps.cpp
cpp/hackerrank/problem_solving_basic_skills_certification/: parallel_processing.cpp
cpp/leet_code/: 1219.cpp  1249.cpp  1255.cpp  1289.cpp  1293.cpp  1325.cpp  140.cpp  1544.cpp  1614.cpp  165.cpp  1700.cpp  1863.cpp  1915.cpp  1971.cpp  1992.cpp  200.cpp  205.cpp  2073.cpp  2331.cpp  2370.cpp  2441.cpp  2487.cpp  2597.cpp  26.cpp  27.cpp  2812.cpp  2816.cpp  2958.cpp  3075.cpp  402.cpp  42.cpp  463.cpp  623.cpp  678.cpp  786.cpp  79.cpp  85.cpp  861.cpp  88.cpp  881.cpp  (+2 more)
projects/datarobot/: main.py  pyproject.toml
projects/datarobot/docs/: DataRobot - Time Series Backend Engineer - Take Home Test.docx
projects/datarobot/tests/: test_predict.py
python/: .gitignore  .vale.ini  README.md  pydoc_links.adoc  pyproject.toml  template.py  test.py
python/0.Introduction/0.SayHelloWorld/: solution.py  template.py
python/0.Introduction/1.IfElse/: solution.py  solution1.py  solution2.py  template.py
python/0.Introduction/2.ArithmeticOperators/: solution.py  template.py
python/0.Introduction/3.Division/: solution.py  template.py
python/0.Introduction/4.Loops/: solution.py
python/0.Introduction/5.PrintFunction/: solution1.py
python/0.Introduction/6.ListComprehensions/: solution.py  solution1.py  solution2.py
python/0.Introduction/6.WriteAFunction/: template.py
python/00.Introduction/0.SayHelloWorld/: solution.py
python/00.Introduction/1.IfElse/: solution1.py  solution2.py  template.py
python/00.Introduction/2.ArithmeticOperators/: solution.py
python/00.Introduction/4.Loops/: solution.py
python/00.Introduction/5.PrintFunction/: solution.py
python/00.Introduction/6.WriteAFunction/: solution.py  solution1.py
python/01.BasicDataTypes/0.Lists/: solution1.py  template.py
python/01.BasicDataTypes/2.NestedLists/: solution1.py
python/01.BasicDataTypes/5.Tuples/: solution.py
python/02.Strings/00.SwapCase/: solution.py  solution1.py
python/02.Strings/01.SplitAndJoin/: solution.py  solution5.py
python/02.Strings/02.WhatsYourName/: solution.py
python/02.Strings/03.Mutations/: solution.py  template.py
python/02.Strings/04.FindAString/: solution.py  solution1.py  solution3.py  solution5.py  template.py
python/02.Strings/05.StringValidators/: solution1.py
python/02.Strings/06.TextAlignment/: solution.py  template.py
python/02.Strings/07.TextWrap/: solution1.py  solution2.py  solution3.py
python/02.Strings/08.DesignerDoorMat/: solution.py
python/02.Strings/09.StringFormatting/: solution.py  template.py
python/02.Strings/10.AlphabetRangoli/: template.py
python/02.Strings/11.Capitalize/: template.py
python/02.Strings/12.TheMinionGame/: solution.py  template.py
python/02.Strings/13.MergeTheTools/: solution.py  template.py
python/03.Sets/01.Introduction/: solution1.py  template.py
python/03.Sets/01.IntroductionToSets/: solution.py  solution1.py  template.py
python/03.Sets/02.Add/: solution1.py
python/03.Sets/03.SymmetricDifference/: solution.py  solution1.py  solution2.py
python/03.Sets/04.DiscardRemovePop/: solution.py  solution1.py
python/03.Sets/04.SetDiscardRemovePop/: solution1.py
python/03.Sets/05.SetUnion/: solution.py
python/98.ScratchPad/: counting_pairs.py  reverse_arguments.py  test.py  test2.py  test3.py  test4.py  test5.py
python/99.Template/: solution.py
python/code_wars/: convert_number_to_reversed_array_of_digits.py  keep_up_the_hoop.py
python/hackerrank/: 2d_array_ds.py  dynamic_array.py  introduction_arithmetic_operators.py  introduction_division.py  introduction_if_else.py  loops.py
python/leet_code/: 1249.py  1289.py  131.py  1331.py  1405.py  1544.py  1608.py  1614.py  165.py  1700.py  1863.py  1915.py  1942.py  1963.py  1992.py  200.py  205.py  2073.py  2326.py  2370.py  2416.py  2441.py  2487.py  2491.py  2530.py  26.py  2696.py  27.py  2707.py  2812.py  2816.py  3043.py  3075.py  42.py  463.py  623.py  678.py  731.py  786.py  79.py  (+5 more)
python/template/: solution.py  template.py
python/utils/: missing.py
(+1800 files in other folders)
