[tool.poetry]
name = "hackerrank"
version = "0.1.0"
description = ""
authors = ["Jerod Gawne <jerodgawne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
devtools = "^0.8.0"
union = "^0.1.10"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
