cmake_minimum_required(VERSION 3.27)
project(code_challenges)

set(CMAKE_CXX_STANDARD 14)

add_executable(code_challenges
        c++/code_wars/convert_number_to_reversed_array_of_digits.cpp
        c++/hackerrank/2d_array_ds.cpp
        c++/hackerrank/apple_and_orange.cpp
        c++/hackerrank/dynamic_array.cpp
        c++/hackerrank/number_line_jumps.cpp
        c++/leet_code/2958.cpp
        c++/leet_code/88.cpp)
