[tool.poetry]
name = "datarobot-machinelearningserver"
version = "0.1.0"
description = ""
authors = ["JerodG <jerodg@jerodg.dev>"]


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
numpy = "^1.22.3"
pytest = "^7.1.1"
Cython = "^0.29.28"
pybind11 = "^2.9.2"
scikit-learn = "^1.0.2"
pandas = "^1.4.2"
rich = "^12.2.0"
python-multipart = "^0.0.5"
requests = "^2.27.1"
pytest-asyncio = "^0.18.3"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q -s"
testpaths = ["tests"]
asyncio_mode = "auto"
