[tool.poetry]
name = "iris_classification"
version = "0.1.0"
description = "stuffs"
authors = ["some peeps"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
pandas = "^1.4.2"
jupyterlab = "^3.3.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
