[tool.poetry]
name = "debit-scheduler-takehome"
version = "0.1.0"
description = ""
authors = ["Dante Monaldo <dmonaldo@earnup.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.1"
werkzeug = "^2.1.1"
freezegun = "^1.2.1"
Delorean = "^1.0.0"
pandas = "^1.4.2"
holidays = "^0.13"
devtools = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
